--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.application.name=demo
+spring.application.name=demo-app
+
+spring.datasource.url=jdbc:mysql://localhost:3306/practice_user
 spring.datasource.username=root
-spring.datasource.password=tjftkdals098!
+spring.datasource.password=0914
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -8,4 +10,3 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
-
