--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=demo-app
 
-spring.datasource.url=jdbc:mysql://localhost:3306/practice_user
+spring.datasource.url=jdbc:mysql://localhost:3306/health
 spring.datasource.username=root
-spring.datasource.password=0914
+spring.datasource.password=tjftkdals098!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
