--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
 spring.application.name=demo-app
 
-spring.datasource.url=jdbc:mysql://localhost:3306/practice_user
-spring.datasource.username=root
-spring.datasource.password=0914
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 
-# Hibernate SQL ?? ??
-spring.jpa.properties.hibernate.show_sql=truey
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
-# ? Hibernate Dialect ?? ?? (? ??? ??!)
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
